[tool.poetry]
name = "morning-press"
version = "0.1.0"
description = "Get the press, every morning, old school!"
authors = ["Romain de Wolff <romain@dewolff.art>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
reportlab = "^4.2.5"
requests = "^2.32.3"
feedparser = "^6.0.11"
openai = "^1.59.3"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
babel = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
